# rCore_sys

./: .gitignore  README.md  rCore_sys.code-workspace  start.txt
os/: Cargo.toml  makefile
os/.cargo/: config
os/src/: batch.rs  console.rs  entry.asm  lang_items.rs  linker-qemu.ld  log.rs  main.rs  sbi.rs  stack_trace.rs  syscall.rs
os/src/sync/: up.rs
os/src/trap/: context.rs  mod.rs  trap.S
user/: Cargo.toml
user/.cargo/: config
user/src/: console.rs  lang_items.rs  lib.rs  linker.ld  log.rs  sbi.rs  syscall.rs
